--- a/DropstabTest/build.gradle
+++ b/DropstabTest/build.gradle
@@ -10,12 +10,21 @@ repositories {
 }
 
 dependencies {
-    // RestAssured Dependency
-    testImplementation 'io.rest-assured:rest-assured:4.3.3'
-    // TestNG Dependency
-    testImplementation 'org.testng:testng:7.4.0'
-    // JSON Library
-    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'org.testng:testng:7.9.0'
+    implementation 'org.slf4j:slf4j-simple:1.7.32'
+    compileOnly 'org.projectlombok:lombok:1.18.30'
+    annotationProcessor 'org.projectlombok:lombok:1.18.30'
+    testCompileOnly 'org.projectlombok:lombok:1.18.30'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
+    implementation 'com.google.code.gson:gson:2.8.8'
+
+    implementation 'io.rest-assured:rest-assured:4.4.0'
+
+    testImplementation 'org.apache.logging.log4j:log4j-core:2.17.1'
+    testImplementation 'org.apache.logging.log4j:log4j-api:2.17.1'
+
+    implementation "jakarta.xml.bind:jakarta.xml.bind-api:2.3.3"
+    implementation "org.glassfish.jaxb:jaxb-runtime:2.3.3"
 }
 
 test {
